compositor_wayland: don't commit cursor changes if the layer wasn't actually enabled

The drm backend doesn't handle changes that do this well, as it requests a pageflip event and the
kernel can't give us a pageflip event for an already-disabled plane.

BUG: 495843
(cherry picked from commit 769c896cdb5fba5f4078b3cb310ccf98f7c26f3a)